Bug 896176 - Don't add slices as sub-blobs. r=khuey, a=leo+